# yang-to-ngsi-ld

./: .gitignore  CITATION.cff  README.md  Test.java  ietf-interfaces.jsonld  interfaces-ngsi-ld.drawio  pyproject.toml
latency-tests/docker/ncclient-collector/: Dockerfile  docker-entrypoint.sh  ncclient-collector-kafka.py  pyproject.toml
latency-tests/docker/ncclient-collector/ncclient_collector/: csr-create-periodic-subscription-interfaces-state-kafka.py
latency-tests/docker/xml-parser-with-ngsi-ld-instantiator/: Dockerfile  performance_measurements.csv  pyproject.toml  xml-parser-with-ngsi-ld-instantiator.py
latency-tests/ngsi-ld-models/: pyproject.toml
latency-tests/ngsi-ld-models/docs/: AppendAttrsTemporalRequest.md  Attribute.md  AttributeList.md  BatchEntityError.md  BatchOperationResult.md  CreateBatch201Response.md  CreateBatchRequest.md  CreateCSRRequest.md  CreateCSRRequest1.md  CreateSubscriptionRequest.md  CreateSubscriptionRequest1.md  CsourceNotification.md  CsourceRegistration.md  CsourceRegistrationScope.md  Description.md  DestNode.md  Endpoint.md  EntityInfo.md  EntityInfoType.md  EntitySelector.md  EntityTemporal.md  EntityTemporalValue.md  EntityTypeInfo.md  EntityTypeList.md  Feature.md  FeatureCollection.md  FeatureProperties.md  FeaturePropertiesType.md  FeaturePropertiesValue.md  GeoQuery.md  GeoQueryCoordinates.md  GeometryLinearRing.md  GeometryPolygon.md  HasSensor.md  HigherLayerIf.md  Humidity.md  HumiditySensor.md  InMulticastPkts.md  InOctets.md  InterfaceIpv4.md  (+58 more)
latency-tests/ngsi-ld-models/ngsi_ld_models/models/: append_attrs_temporal_request.py  attribute.py  attribute_list.py  batch_entity_error.py  batch_operation_result.py  create_batch201_response.py  create_batch_request.py  create_csr_request.py  create_csr_request1.py  create_subscription_request.py  create_subscription_request1.py  csource_notification.py  csource_registration.py  csource_registration_scope.py  date_time_value.py  description.py  discontinuity_time.py  endpoint.py  entity.py  entity_info.py  entity_info_type.py  entity_scope.py  entity_selector.py  entity_temporal.py  entity_temporal_value.py  entity_type.py  entity_type_info.py  entity_type_list.py  entity_value.py  feature.py  feature_collection.py  feature_properties.py  feature_properties_type.py  feature_properties_value.py  geo_property.py  geo_query.py  geo_query_coordinates.py  geometry.py  geometry_line_string.py  geometry_linear_ring.py  (+71 more)
latency-tests/ngsi-ld-models/test/: test_append_attrs_temporal_request.py  test_attribute.py  test_attribute_list.py  test_batch_entity_error.py  test_batch_operation_result.py  test_create_batch201_response.py  test_create_batch_request.py  test_create_csr_request.py  test_create_csr_request1.py  test_create_global_addresses.py  test_create_subscription_request.py  test_create_subscription_request1.py  test_csource_notification.py  test_csource_registration.py  test_csource_registration_scope.py  test_date_time_value.py  test_description.py  test_endpoint.py  test_entity.py  test_entity_info.py  test_entity_info_type.py  test_entity_scope.py  test_entity_selector.py  test_entity_temporal.py  test_entity_temporal_value.py  test_entity_type.py  test_entity_type_info.py  test_entity_type_list.py  test_entity_value.py  test_feature.py  test_feature_collection.py  test_feature_properties.py  test_feature_properties_type.py  test_feature_properties_value.py  test_geo_property.py  test_geo_query.py  test_geo_query_coordinates.py  test_geometry.py  test_geometry_line_string.py  test_geometry_linear_ring.py  (+72 more)
latency-tests/python/: .env  ngsi-ld_instantiator_kafka.py  pyproject.toml
ngsi-ld/data-models/openapi-schemas/ietf-interfaces-tester/: create-interface-entity.py  create-interface_statistics-entity.py  create-ipv4-entity.py  create-ipv4_address-entity.py  create-ipv4_neighbor-entity.py  create-ipv6-entity.py  create-ipv6_address-entity.py  create-ipv6_autoconf-entity.py  create-ipv6_neighbor-entity.py  create-statistics-entity.py  delete-interface-entity.py  delete-interface_statistics-entity.py  delete-statistics-entity.py  docker-compose.yml  ietf-interfaces-generated-xml-parser-test.py  ietf-interfaces-generated-xml-parser.py  ietf-interfaces-generated-xml-parser_file.py  ietf-interfaces-generated-xml-parser_kafka.py  ietf-interfaces-generated-xml-parser_perf-eval.py  ietf-interfaces-generated-xml-parser_perf_eval.py  ietf-interfaces-generated-xml-parser_print.py  ietf-interfaces-ngsi-ld-instantiatior_file.py  ietf-interfaces-ngsi-ld-instantiatior_kafka.py  ietf-interfaces_ietf-ip_ngsi-ld-instantiatior_file.py  pyproject.toml  query-interface-entities.py  query-interface_statistics-entities.py  query-statistics-entities.py  retrieve-interface-entity.py  retrieve-interface_statistics-entity.py  retrieve-statistics-entity.py  sample-ietf-interfaces-reduced1.xml  sample-ietf-interfaces-xml-parser.py  sample_ietf_interfaces_dict_buffer.json  update-interface-entity.py  update-interface_statistics-entity.py  update-statistics-entity.py  upsert-interface-interface_statistics-entities.py  upsert-interface-statistics-entities.py
ngsi-ld/data-models/openapi-schemas/ngsi-ld-models/: pyproject.toml
testbeds/gnmi-srlinux/docker/notifier-tester/: pyproject.toml
testbeds/gnmi/docker/gnmi-json-parser-notifications-with-ngsi-ld-instantiator/: candil_openconfig_interfaces_json_parser_notifications.py  candil_openconfig_interfaces_ngsi_ld_instantiator.py  performance_measurements.csv  pyproject.toml
testbeds/gnmi/docker/network-controller-materialization/: Dockerfile  pyproject.toml
testbeds/netconf/docker/netconf-network-controller-virtualization/: Dockerfile  docker-entrypoint.sh  pyproject.toml
testbeds/netconf/docker/netconf-notifier-tester-virtualization-on-change-context-source/: Dockerfile  docker-entrypoint.sh  pyproject.toml
testbeds/netconf/ngsi-ld-models-mdt-client-data-virtualization/: pyproject.toml
testbeds/netconf/ngsi-ld-models-netconf-client-data-virtualization/: netconf-client-data-virtualization.yaml  pyproject.toml
(+17447 files in other folders)
