[tool.poetry]
name = "ncclient-collector"
version = "0.0.1"
description = "ncclient-collector"
authors = ["Daniel González Sánchez <daniel.gonzalez.sanchez@upm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ncclient = "^0.6.15"
kafka-python = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
