[tool.poetry]
name = "ngsi_ld_models"
version = "1.0.0"
description = "ietf-intefaces@2018-02-20.yang OpenAPI Schema - Pydantic classes"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^1.8.2"
PyYAML = "^6.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"