[tool.poetry]
name = "gnmi-json-parser-notifications-with-ngsi-ld-instantiator"
version = "1.0.0"
description = "gNMI JSON parser and NGSI-LD instantiator for openconfig-interfaces and derived modules (Subscribe RPCs)"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = "^3.9.5"
urllib3 = ">=1.25.3,<2.1.0"
ngsi-ld-models = ">=1.0.0"
ngsi_ld_client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "1.6.1" }
pyyaml = "^6.0"
kafka-python = ">=2.0.2"
python-dateutil = ">=2.8.2"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"
ngsi-ld-models = { path = "ngsi-ld-models", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
