[tool.poetry]
name = "netconf-network-controller-virtualization"
version = "1.0.0"
description = "NETCONF Network Controller Virtualization"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = {extras = ["all"], version = "^0.103.2"}
urllib3 = ">=1.25.3,<2.1.0"
markupsafe = ">=2.1.0,<2.1.5"
ngsi_ld_models_1_8_1 = ">=1.0.0"
ngsi_ld_client_1_8_1 = ">=1.0.0"
ngsi_ld_models_ietf_interfaces = ">=1.0.0"
ngsi_ld_models_mdt_client_data_virtualization = ">=1.0.0"
ngsi_ld_client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "1.7.1" }
ncclient = "^0.6.13"
kafka-python = "^2.1.0"
python-dateutil = "^2.9.0"
jinja2 = "^3.1.4"
numpy = "^1.26.4"
python-snappy = "^0.7.3"
httpx = {extras = ["http2"], version = "^0.28.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"
ngsi_ld_models_1_8_1 = { path = "../../ngsi-ld-models-1-8-1", develop = true }
ngsi_ld_client_1_8_1 = { path = "../../ngsi-ld-client-1-8-1", develop = true }
ngsi_ld_models_ietf_interfaces = { path = "../../ngsi-ld-models-ietf-interfaces", develop = true }
ngsi_ld_models_mdt_client_data_virtualization = { path = "../../../ngsi-ld-models-mdt-client-data-virtualization", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
