[tool.poetry]
name = "xml-parser-with-ngsi-ld-instantiator-virtualization"
version = "1.0.0"
description = "XML parser and NGSI-LD instantiator for ietf-interfaces and derived modules"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = "^3.9.5"
urllib3 = ">=1.25.3,<2.1.0"
ngsi-ld-models-ietf-interfaces = ">=1.0.0"
ngsi_ld_client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "1.7.1" }
pyyaml = "^6.0"
kafka-python = ">=2.0.2"
python-dateutil = ">=2.8.2"
python-snappy = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"
ngsi-ld-models-ietf-interfaces = { path = "ngsi-ld-models-ietf-interfaces", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
