[tool.poetry]
name = "netflow-yang-converter"
version = "1.0.0"
description = "NetFlow YANG converter."
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = "^3.9.5"
pyyaml = "^6.0"
kafka-python = "^2.1.0"
urllib3 = ">=1.25.3,<2.1.0"
python-dateutil = ">=2.8.2"
requests = "^2.31.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
